BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Assessment__c.object
<CustomObject>
    <description>The Assessment object contains a standardized approach to managing assessment criteria for Accounts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account is the Account that the Assessment has been created for.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys (Account)</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assess_dose_reduction_BMS__c</fullName>
        <inlineHelpText>To what extent does the prescriber/non-prescriber assess the dose reduction schedule to manage toxicities?</inlineHelpText>
        <label>Assess dose reduction to mng toxicities?</label>
        <picklist>
            <picklistValues>
                <fullName>Does not assess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrequently assesses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consistently assesses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactively assess for IXEMPRA toxicities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assesses_tumor_progression_BMS__c</fullName>
        <inlineHelpText>If HCP uses YERVOY, the HCP assesses tumor progression for YERVOY patients?</inlineHelpText>
        <label>Assesses tumor progression?</label>
        <picklist>
            <picklistValues>
                <fullName>Only after 12 weeks and every 4 weeks up to 24 and then every three months thereafter as per label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only after 12 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before 12 weeks, but doesn&apos;t change YERVOY regimen based on these scans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before 12 weeks and changes YERVOY regimen based on the results of these tests</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>At_least_one_CML_patient_per_year_BMS__c</fullName>
        <inlineHelpText>Does this physician treat at least one or more CML patients per year?</inlineHelpText>
        <label>At least one CML patient per year?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avastin_across_multiple_therapies_BMS__c</fullName>
        <inlineHelpText>Does prescriber continue Avastin use across multiple lines of therapy?</inlineHelpText>
        <label>Avastin across multiple therapy lines?</label>
        <picklist>
            <picklistValues>
                <fullName>Regularly continues Avastin across 3+ lines of therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regularly continues Avastin across 2 lines of therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasionally continues Avastin across lines of therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uses Avastin in single line of therapy if at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aware_of_reimbursement_assistance_BMS__c</fullName>
        <inlineHelpText>Is prescriber aware of reimbursement assistance programs?</inlineHelpText>
        <label>Aware of rmbrsmnt assistance programs?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMS_Code_ID__c</fullName>
        <label>BMS Code ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breast_Cancer_ptnts_chemotherapy_BMS__c</fullName>
        <inlineHelpText>Approximately how many unique metastatic Breast Cancer patients per year does the prescriber treat with chemotherapy?</inlineHelpText>
        <label>Breast Cancer ptnts trtd w/ chemotherapy</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Patient_Profiles__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How likely is the KOL to use Patient Profile documents?</inlineHelpText>
        <label>CC Patient Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Study_Leverage__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How likely is the KOL to leverage Cholecap Study findings during peer discussions?</inlineHelpText>
        <label>CC Study Leverage</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Survey segmentation field by channel for MM users</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial and MMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMA only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part B Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital/Specialty GPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA/DOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercial_BMS__c</fullName>
        <inlineHelpText>What percentage of the business (payer) mix in the office is commercial?</inlineHelpText>
        <label>Commercial</label>
        <picklist>
            <picklistValues>
                <fullName>0-10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61-70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>71-80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Activity__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How active is this KOL in the local healthcare community?</inlineHelpText>
        <label>Community Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Very Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Continue_with_ERBITUX_BMS__c</fullName>
        <inlineHelpText>How does the treatment team member continue with ERBITUX?</inlineHelpText>
        <label>Continue with ERBITUX?</label>
        <picklist>
            <picklistValues>
                <fullName>Regularly discontinues ERBITUX early due to rash or when stopping chemo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasionally uses ERBITUX until progression or unacceptable toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regularly continues ERBITUX until disease progression or unacceptable toxicity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Differentiate_ERBITUX_and_Vectibix_BMS__c</fullName>
        <inlineHelpText>Does this prescriber differentiate between ERBITUX and Vectibix?</inlineHelpText>
        <label>Differentiate btw ERBITUX and Vectibix?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (prefers ERBITUX)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (Prefers Vectibix)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribute_branded_ptnt_ed_BMS__c</fullName>
        <inlineHelpText>Does your facility allow you to distribute branded patient education materials?</inlineHelpText>
        <label>Distribute branded ptnt ed. materials?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_prescriber_most_closely_follow_BMS__c</fullName>
        <label>Does prescriber most closely follow?</label>
        <picklist>
            <picklistValues>
                <fullName>Reimbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_the_prescriber_recycle_taxans_BMS__c</fullName>
        <label>Does the prescriber recycle taxans?</label>
        <picklist>
            <picklistValues>
                <fullName>Almost always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrequently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almost never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_the_prescriber_treat_CRC_BMS__c</fullName>
        <label>Does the prescriber treat CRC?</label>
        <picklist>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased interest in tumor type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (normal level)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ERBITUX_Locoregioanlly_Advanced_BMS__c</fullName>
        <inlineHelpText>Does MedOnc use ERBITUX in loco regionally advanced disease?</inlineHelpText>
        <label>ERBITUX: Locoregioanlly Advanced Disease</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrequently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almost Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almost Always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ERBITUX_perceived_efficacy_LRD_SCCHN_BMS__c</fullName>
        <inlineHelpText>Relative to platinum therapies, how does this physician perceive the efficacy of ERBITUX in the treatment of appropriate LRD SCCHN?</inlineHelpText>
        <label>ERBITUX perceived efficacy - LRD SCCHN</label>
        <picklist>
            <picklistValues>
                <fullName>Exclusively uses Platinum+RT in eligible LRD patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uses ERBITUX+RT only in patients who are clearly platinum-ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uses ERBITUX+RT in patients eligible but high rise (ex. Low PS, elderly, comorbidities)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Typically uses ERBITUX+RT appropriately across LRD patients</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ERBITUX_recurrent_metastatic_desease_BMS__c</fullName>
        <inlineHelpText>Does MedOnc use ERBITUX in recurrent / metastatic desease?</inlineHelpText>
        <label>ERBITUX: recurrent/metastatic desease?</label>
        <picklist>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrequently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almost never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almost always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ensure_Safe_Management_of_YERVOY_BMS__c</fullName>
        <inlineHelpText>How does the HCP ensure save management of YERVOY?</inlineHelpText>
        <label>Ensure Safe Management of YERVOY?</label>
        <picklist>
            <picklistValues>
                <fullName>Fully trained staff on YERVOY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active involvement of Patient Educators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use of Patient Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow REMs protocols</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other internal systems to manage safety</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Evidence_to_prescribe_2nd_Gen_TKI_BMS__c</fullName>
        <inlineHelpText>Does customer believe that the current body of data is sufficient evidence to prescribe a 2nd Generation TKI over Gleevec in 1st line?</inlineHelpText>
        <label>Suff evidence to prescribe 2nd Gen TKI?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes the current data is sufficient evidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No I would need longer term follow-up to prescribe a 2nd Gen. TKI in 1st line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Face_to_face_calls_per_year__c</fullName>
        <inlineHelpText>Quantify the level of access for this prescriber based on number of face to face calls that can be delivered per year.</inlineHelpText>
        <label>Face-to-face calls per year</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Familiar_with_2_step_dose_reduction_BMS__c</fullName>
        <inlineHelpText>Can the prescriber articulate/how familiar are they with the two step (20%) dose reduction schedule for certain toxicities?</inlineHelpText>
        <label>Familiar with 2-step dose reduction?</label>
        <picklist>
            <picklistValues>
                <fullName>Very familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaguely Familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Health_Plan_BMS__c</fullName>
        <label>First Health Plan</label>
        <picklist>
            <picklistValues>
                <fullName>United Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Well Point / Anthem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aetna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_does_prscrbr_administer_ERBITUX_BMS__c</fullName>
        <inlineHelpText>How would you categorize the way this physician administers ERBITUX+RT in the SCCHN LRD?</inlineHelpText>
        <label>How does prscrbr administer ERBITUX+RT?</label>
        <picklist>
            <picklistValues>
                <fullName>Does not know how to appropriately determine difference between mild/moderate and severe EGFR rash and infusion reactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is unaware of dosing modifications for severe EGFR rash and infusion reactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactively responds to mild/moderate reactions with dose modifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Understands all dose modifications for toxicities and appropriately dose modifies for severe EGFR rash and for infusions reactions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_does_the_HCP_infuse_YERVOY_BMS__c</fullName>
        <inlineHelpText>If HCP uses YERVOY, the HCP infuses YERVOY? (Choose all that apply)</inlineHelpText>
        <label>How does the HCP infuse YERVOY?</label>
        <picklist>
            <picklistValues>
                <fullName>3mg/kg dose used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once every three weeks for 4 doses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treats side effects at 1/2 w/o w/holding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withholds when 3/4 side effects presents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>If 3/4 doesn&apos;t resolve on w/hold - stops</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_does_the_prescriber_use_Vectibix_BMS__c</fullName>
        <label>How does the prescriber use Vectibix?</label>
        <picklist>
            <picklistValues>
                <fullName>Uses Vectibix instead of ERBITUX in all settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uses Vectibix and ERBITUX equally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uses ERBITUX for combination but Vectibix as SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uses Vectibix as SA late line following ERBITUX if at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_important_is_once_daily_dosing_BMS__c</fullName>
        <inlineHelpText>Please rate on a scale of 1-7 how important once daily dosing convenience with no fasting requirements is to customers when selecting a TKI for the treatment of CML?</inlineHelpText>
        <label>How important is once daily dosing?</label>
        <picklist>
            <picklistValues>
                <fullName>1 Not important at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Relatively unimportant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Slightly less important than other factors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Equal in importance to other factors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Slightly more important than other factors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 One of the top considerations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 The most important consideration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_CML_patients_BMS__c</fullName>
        <inlineHelpText>How many CML patients does this prescriber manage as the primery Oncologist/Hematologist?  Please include all CML patients, not just newly diagnosed ones.</inlineHelpText>
        <label>How many CML patients?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_PH_All_patients_year_BMS__c</fullName>
        <inlineHelpText>How many unique Ph+ ALL patients does this prescriber see per year?</inlineHelpText>
        <label>How many PH+ All patients / year?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time, but will investigate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IIIC_IV_MM_patients_BMS_CA__c</fullName>
        <description>Nbr of Patients in practice MM (Stage IIIC and IV) in past 12 months?</description>
        <inlineHelpText>Nbr of Patients in practice MM (Stage IIIC and IV) in past 12 months?</inlineHelpText>
        <label>IIIC&amp;IV MM patients</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IXEMPRA_reimbursement_concerns_BMS__c</fullName>
        <inlineHelpText>Are there any reimbursement concerns the practice may have regarding IXEMPRA?</inlineHelpText>
        <label>IXEMPRA reimbursement concerns?</label>
        <picklist>
            <picklistValues>
                <fullName>Has had issues, concerns are limiting use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometime uses the IXEMPRA only where reimbursement will not be a concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is not conferrable with how to bill or code for the IXEMBRA and seems to have many issues and questions which have not been resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reimbursement is not an issue and practice is comfortable with all of BMS support services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IXEMPRA_used_as_combo_with_XELODA_BMS__c</fullName>
        <inlineHelpText>In which line of therapy is IXEMPRA typically used as combo therapy with XELODA?</inlineHelpText>
        <label>IXEMPRA used as combo with XELODA?</label>
        <picklist>
            <picklistValues>
                <fullName>1st or 2nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd or 4th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th or later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any line but only in specific subset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_no_how_is_situation_handled_BMS__c</fullName>
        <label>If no temp codes, how is it handled?</label>
        <picklist>
            <picklistValues>
                <fullName>Send patient to hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send patient to non-hospital infusion center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choose other treatment options</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>